<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:icon="@android:drawable/ic_dialog_dialer" android:id="@+id/itemSpecialKeys" android:title="@string/special_keys" android:alphabeticShortcut="s" android:numericShortcut="1"/>
    <item android:icon="@android:drawable/ic_menu_mylocation" android:id="@+id/itemCenterMouse" android:title="@string/center_mouse" android:alphabeticShortcut="m" android:numericShortcut="2"/>
    <item android:icon="@android:drawable/ic_menu_edit" android:id="@+id/itemEnterText" android:title="@string/enter_text" android:alphabeticShortcut="e"/>
    <item android:icon="@android:drawable/ic_input_get" android:id="@+id/itemInputMode" android:title="@string/input_mode" android:alphabeticShortcut="p" android:numericShortcut="5">
        <menu>
            <group android:checkableBehavior="single">
                <item android:id="@+id/itemInputTouchPanZoomMouse" android:title="@string/input_mode_touch_pan_zoom_mouse"/>
                <item android:id="@+id/itemInputTouchpad" android:title="@string/input_mode_touchpad"/>
                <item android:id="@+id/itemInputFitToScreen" android:checked="true" android:title="@string/input_mode_fit_to_screen"/>
                <item android:id="@+id/itemInputPan" android:title="@string/input_mode_panning"/>
                <item android:id="@+id/itemInputMouse" android:title="@string/input_mode_mouse"/>
                <item android:id="@+id/itemInputTouchPanTrackballMouse" android:title="@string/input_mode_touchpad_pan_trackball_mouse"/>
                <item android:id="@+id/itemInputDPadPanTouchMouse" android:title="@string/input_mode_dpad_pan_touchpad_mouse"/>
            </group>
        </menu>
    </item>
    <item android:icon="@android:drawable/ic_menu_close_clear_cancel" android:id="@+id/itemDisconnect" android:title="@string/disconnect" android:alphabeticShortcut="d" android:numericShortcut="7"/>
    <group android:checkableBehavior="all">
        <item android:id="@+id/itemFollowMouse" android:title="@string/pan_follow_mouse" android:alphabeticShortcut="f" android:numericShortcut="6"/>
        <item android:id="@+id/itemFollowPan" android:title="@string/mouse_follow_pan"/>
    </group>
    <item android:icon="@android:drawable/ic_menu_preferences" android:id="@+id/itemColorMode" android:title="@string/color_mode" android:alphabeticShortcut="c" android:numericShortcut="3"/>
    <item android:icon="@android:drawable/ic_menu_zoom" android:id="@+id/itemScaling" android:title="@string/scaling" android:alphabeticShortcut="z" android:numericShortcut="4">
        <menu>
            <group android:id="@+id/groupScaling" android:checkableBehavior="single">
                <item android:id="@+id/itemZoomable" android:title="@string/scaling_zoomable"/>
                <item android:id="@+id/itemOneToOne" android:title="@string/one_to_one"/>
                <item android:id="@+id/itemFitToScreen" android:checked="true" android:title="@string/fit_to_screen"/>
            </group>
        </menu>
    </item>
    <item android:icon="@android:drawable/ic_menu_share" android:id="@+id/itemCtrlAltDel" android:title="@string/ctrl_alt_del" android:alphabeticShortcut="a" android:numericShortcut="8"/>
    <item android:icon="@android:drawable/ic_menu_info_details" android:id="@+id/itemInfo" android:title="@string/info" android:alphabeticShortcut="i" android:numericShortcut="9"/>
    <item android:id="@+id/itemSendKeyAgain" android:title="@string/send_key_again" android:alphabeticShortcut="g"/>
    <item android:id="@+id/itemArrowLeft" android:title="@string/arrow_left" android:alphabeticShortcut="h"/>
    <item android:id="@+id/itemArrowDown" android:title="@string/arrow_down" android:alphabeticShortcut="j"/>
    <item android:id="@+id/itemArrowUp" android:title="@string/arrow_up" android:alphabeticShortcut="k"/>
    <item android:id="@+id/itemArrowRight" android:title="@string/arrow_right" android:alphabeticShortcut="l"/>
    <item android:icon="@android:drawable/ic_menu_help" android:id="@+id/itemOpenDoc" android:title="@string/open_doc"/>
</menu>
