<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android" android:gravity="center" android:id="@+id/dialogImportExport" android:padding="5dp" android:layout_width="match_parent" android:layout_height="match_parent">
    <TableRow>
        <TextView android:gravity="right|center_vertical|center_horizontal|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/import_settings_file_url"/>
        <EditText android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textImportUrl" android:layout_width="match_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1"/>
        <Button android:id="@+id/buttonImport" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/import_settings"/>
    </TableRow>
    <TableRow>
        <TextView android:gravity="right|center_vertical|center_horizontal|center" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/export_settings_path"/>
        <EditText android:textAppearance="?android:attr/textAppearanceSmall" android:id="@+id/textExportPath" android:layout_width="match_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1"/>
        <Button android:id="@+id/buttonExport" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/export_settings"/>
    </TableRow>
</TableLayout>
