<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" android:orientation="vertical" android:padding="5dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:id="@+id/textRepeaterCaption" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/repeater_caption"/>
    <EditText android:id="@+id/textRepeaterInfo" android:layout_width="match_parent" android:layout_height="wrap_content" android:singleLine="true" android:layout_weight="1"/>
    <LinearLayout android:orientation="horizontal" android:padding="5dp" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button android:gravity="left|center_vertical|center_horizontal|center" android:id="@+id/buttonSaveRepeater" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/repeater_save"/>
        <Button android:gravity="right|center_vertical|center_horizontal|center" android:id="@+id/buttonClearRepeater" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/repeater_clear"/>
    </LinearLayout>
</LinearLayout>
